--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
 <nav>
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/resume">Resume</a></li>
+        <li><a href="/resume/Resume - hongjoonchew.pdf">Resume</a></li>
         <li><a href="/projects">Student Projects</a></li>
     </ul>
 </nav>
