--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,21 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
+ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style: none;
+    font-weight: bold;
+}
+
+ul.list a {
+    color:#897570;
+}
+
+ul.list li {
+    margin: 0 20px 30px 0;
+}
 a {
     text-decoration: none;
     color: #999;
@@ -27,6 +42,8 @@ p {
     font-size: 1.5em;
     line-height: 1.4em;
     color: #333;
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+
 }
 footer {
     border-top: 1px solid #d5d5d5;
